--- a/package.json
+++ b/package.json
@@ -7,15 +7,26 @@
   "description": "A Sample Analyzer App",
   "private": true,
   "dependencies": {
+    "@electron/remote": "^2.0.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "electron-is-dev": "^1.2.0",
+    "axios": "^1.3.3",
+    "bootstrap": "^5.2.3",
     "electron-squirrel-startup": "^1.0.0",
+    "file-saver": "^2.0.5",
+    "framer-motion": "^9.0.2",
+    "fs": "^0.0.1-security",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.8.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "sheetjs-style": "^0.15.8",
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "dev": "concurrently -k \"cross-env BROWSER=none npm start\" \"npm:electron\"",
@@ -53,7 +64,7 @@
     "@electron-forge/maker-zip": "^6.1.1",
     "concurrently": "^5.2.0",
     "cross-env": "^7.0.3",
-    "electron": "^9.1.1",
+    "electron": "^23.0.0",
     "electron-devtools-installer": "^3.2.0",
     "wait-on": "^5.1.0"
   }
