--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "electron-is-dev": "^1.2.0",
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
+    "electron-is-dev": "^1.2.0",
     "electron-squirrel-startup": "^1.0.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^9.0.2",
     "fs": "^0.0.1-security",
+    "python-shell": "^5.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
-    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sheetjs-style": "^0.15.8",
     "web-vitals": "^2.1.4",
