--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "electron-is-dev": "^1.2.0",
+    "electron-log": "^4.4.8",
     "electron-squirrel-startup": "^1.0.0",
     "electron-unhandled": "^4.0.1",
     "file-saver": "^2.0.5",
